# torch-mini

./: CMakeLists.txt  CMakePresets.json  MILESTONES.md  README.md
.github/workflows/: ci.yml
cmake/: CompilerWarnings.cmake  Sanitizers.cmake
include/: eltwise.hpp  options.hpp  storage.hpp  tensor.hpp
src/: CMakeLists.txt
tests/: CMakeLists.txt  test_eltwise.cpp
